--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </ul>
                         <ul>
                             <li>
-                                <a href="#">                                
+                                <a href="#contacts">                                
                                     <button>
                                         Contacte-nos
                                     </button>
