--- a/index.html
+++ b/index.html
@@ -401,10 +401,10 @@
                     <div class="sociallinks">
                         <ul>
                             <li>
-                                <a href="#"><img src="./Assets/face.png" alt=""></a>
+                                <a href="https://www.facebook.com/profile.php?id=61556028361588"><img src="./Assets/face.png" alt=""></a>
                             </li>
                             <li>
-                                <a href="#"><img src="./Assets/insta.png" alt=""></a>
+                                <a href="https://www.instagram.com/code_cr3ator?igsh=cHM2amtwa3RvZTB1&utm_source=qr"><img src="./Assets/insta.png" alt=""></a>
                             </li>
                             <li>
                                 <a href="#"><img src="./Assets/youtube.png" alt=""></a>
