--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <header>
         <nav id="navbar">
             <div class="logo">
-                <img src="./Assets/bLogo.png" alt="logotipo da codecreator">
+                <a href="#hero">
+                    <img src="./Assets/bLogo.png" alt="logotipo da codecreator">
+                </a>
                 <a href="#">
                     <img src="./Assets/menubutton.png" alt="">
                 </a>
