--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#hero">
                     <img src="./Assets/bLogo.png" alt="logotipo da codecreator">
                 </a>
-                <a href="#">
+                <a href="#" id="menuBar">
                     <img src="./Assets/menubutton.png" alt="">
                 </a>
             </div>            
