--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                     <img src="./Assets/webflow.png" alt="">
                 </div>
             </div>
-            <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a>
+<!--             <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a> -->
+            <button id="button" onclick="openChat()" style="text-shadow: 1px 1px 1px #000000"><img src="./Assets/whatsappb.png" alt=""></button>
         </section>
         <section id="highlight">
             <div class="container">
