--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
 <!--             <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a> -->
-            <button id="button" onclick="openChat()" style="text-shadow: 1px 1px 1px #000000"><img src="./Assets/whatsappb.png" alt=""></button>
+            <button id="button" onclick="openChat()"><img src="./Assets/whatsappb.png" alt=""></button>
         </section>
         <section id="highlight">
             <div class="container">
@@ -437,6 +437,12 @@
             }
         });
     </script>
-    </script>
+    <script>
+            
+            function openChat() {
+                window.open("https://wa.me/+258874855635", "chat", "width=600,height=800");
+            }
+
+        </script>
 </body>
 </html>
