--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
 <!--             <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a> -->
-            <button id="btnwsapp" onclick="openChat()"><img src="./Assets/whatsappb.png" alt=""></button>
+            <button id="btnwsapp" onclick="openChat()"><img src="./Assets/whatsappb.png" alt="icon de whatsapp"></button>
         </section>
         <section id="highlight">
             <div class="container">
