--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav id="navbar">
             <div class="logo">
-                <a href="#hero">
+                <a href="#hero" id="cclogo">
                     <img src="./Assets/bLogo.png" alt="logotipo da codecreator">
                 </a>
                 <a href="#" id="menuBar">
