--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <div class="content">
                             <ul>
                                 <li>Domínio (.com) Grátis (1º Ano) </li>
-                                <li>Certidicação SSL</li>
+                                <li>Certificação SSL</li>
                                 <li>5 Caixas de Correio Electrônico</li>
                                 <li>Cópias de Segurança</li>
                                 <li>Migração Grátis</li>
