--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="./Assets/bLogo.png" alt="logotipo da codecreator">
                 </a>
                 <a href="#" id="menuBar">
-                    <img src="./Assets/menubutton.png" alt="">
+                    <img src="./Assets/menubtn.png" alt="">
                 </a>
             </div>            
             <div class="navlinks">
