--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                         <ul>
                             <li>
                                 <a href="#">
-                                    <img src="./Assets/check.png" alt="">
+                                    <img src="./Assets/check.png" alt="icone de verificado">
                                     Domínio Grátis
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="./Assets/check.png" alt="">
+                                    <img src="./Assets/check.png" alt="icone de verificado">
                                     Suporte 24/7
                                 </a>
                             </li>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="content" id="webflow">
-                    <img src="./Assets/webflow.png" alt="">
+                    <img src="./Assets/webflow.png" alt="imagem de ui/ux">
                 </div>
             </div>
 <!--             <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a> -->
