--- a/index.html
+++ b/index.html
@@ -419,5 +419,6 @@
             }
     </script>
     <script src="./JS/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>
 </html>
