--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
 <!--             <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a> -->
-            <button id="btnwsapp" onclick="openChat()"><img src="./Assets/whatsappb.png" alt="icon de whatsapp"></button>
+<!--             <button id="btnwsapp" onclick="openChat()"><img src="./Assets/whatsappb.png" alt="icon de whatsapp"></button> -->
         
             <div class="chatbox">
                 <div class="chatbox-support">
