--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         })
     </script>
 
-    <script>
+<!--     <script>
         "use strict";
         
         !function() {
@@ -47,7 +47,7 @@
         }();
         drift.SNIPPET_VERSION = '0.3.1';
         drift.load('yvcaf7c3v8ed');
-    </script>
+    </script> -->
 
 </head>
 <body>
@@ -107,7 +107,7 @@
                 </div>
             </div>
 <!--             <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a> -->
-<!--             <button id="btnwsapp" onclick="openChat()"><img src="./Assets/whatsappb.png" alt="icon de whatsapp"></button> -->
+            <button id="btnwsapp" onclick="openChat()"><img src="./Assets/whatsappb.png" alt="icon de whatsapp"></button>
         
             <div class="chatbox">
                 <div class="chatbox-support">
