--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img src="./Assets/webflow.png" alt="">
                 </div>
             </div>
-<!--             <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a> -->
+            <a id="button" href="#"><img src="./Assets/whatsappb.png" alt=""></a>
             <button id="btnwsapp" onclick="openChat()"><img src="./Assets/whatsappb.png" alt="icon de whatsapp"></button>
         
             <div class="chatbox">
