--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     <img src="./Assets/webflow.png" alt="">
                 </div>
             </div>
+
             <button id="btnwsapp" onclick="openChat()"><img src="./Assets/whatsappb.png" alt="icon de whatsapp"></button>
         
             <div class="chatbox">
@@ -183,7 +184,7 @@
                                 <li>Suporte Técnico e Manutenção</li>
                             </ul>
                         </div>
-                        <a href="#">Detalhes</a>
+                        <a href="#" id="btnS">Detalhes</a>
                     </div>
                     <div class="box">
                         <h4>Hospedagem</h4>
