--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <h2>Acerca de Nós</h2>
                             <p>
                                 Bem-vindo à nossa plataforma dedicada a proporcionar soluções inovadoras e esteticamente
-                                atraentes no mundo digital. Somos uma equipe comprometida em transformar ideias em
+                                atraentes para o mundo digital. Somos uma equipe comprometida em transformar ideias em
                                 experiências interativas e visualmente impactantes por meio de nossos serviços abrangentes de desenvolvimento de aplicações web e design.
                             </p>
                         </div>
