--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <header  class="nav-container">
         <nav class="navbar">
-            <a href="#hero"><img src="./Assets/wLogo.png" alt="Logotipo da Code Creator"></a>
+            <a href="#hero"><img src="./Assets/codec.png" alt="Logotipo da Code Creator"></a>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -103,6 +103,13 @@
                     <div class="chat-footer">
                         <input type="text" id="textBox" name="message" placeholder="Escreva aqui a sua mensagem" required="required">
                         <button onclick = "send();"> <img src="./Assets/send.png" alt=""></button>
+                    </div>
+                </div>
+            </div>
+            <div class="circular">
+                <div class="innercirc">
+                    <div class="centercirc">
+                        <div class="minuscirc"></div>
                     </div>
                 </div>
             </div>
