--- a/index.html
+++ b/index.html
@@ -50,16 +50,14 @@
                         <h1>
                             Criando Excelência Digital!
                         </h1>
-                        <ul>
+                        <ul class="checklist">
                             <li>
                                 <a href="#">
-                                    <img src="./Assets/check.png" alt="">
                                     Domínio Grátis
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="./Assets/check.png" alt="">
                                     Suporte 24/7
                                 </a>
                             </li>
