--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <li>Diferenciação</li>
                                 <li>Reconhecimento</li>
                                 <li>Credibilidade</li>
-                                <li>Relevançia e Consistência</li>
+                                <li>Relevancia e Consistência</li>
                             </ul>
                         </div>
                     </div>
