--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <a href="#"><p>Partindo de 23 999,00 mt</p></a>
                             <ul>
                                 <li>Navegação Intuitiva</li>
-                                <li>Resposinvidade</li>
+                                <li>Responsividade</li>
                                 <li>Segurança</li>
                                 <li>Suporte Técnico e Manutênção</li>
                             </ul>
